create and implement new endpoint to change content type metadata